[gd_scene load_steps=18 format=2]

[ext_resource path="res://Themes/generic_theme.tres" type="Theme" id=1]
[ext_resource path="res://Resources/github.svg" type="Texture" id=2]
[ext_resource path="res://Scripts/MainMenu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Fonts/ClearSans-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0.00343643, -327.273 ), 0.0, 502.454, 0, 1, Vector2( 1, 173.455 ), 502.454, 0.0, 1, 0 ]

[sub_resource type="DynamicFont" id=3]
size = 13
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 614, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 614, 300 ), Vector2( 414, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4.75, 1 ),
"update": 0,
"values": [ Vector2( 414, 300 ), Vector2( 214, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 4.75, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=9]
content_margin_bottom = 10.0
draw_center = false

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 6 )

[node name="MainMenuControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 512, 900 )
amount = 20
lifetime = 50.0
preprocess = 50.0
emission_shape = 2
emission_rect_extents = Vector2( 530, 1 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.5
angle = 90.0
angle_random = 1.0
angle_curve = SubResource( 2 )
scale_amount = 400.0
scale_amount_random = 0.5
color = Color( 0.192157, 0.192157, 0.207843, 1 )

[node name="MainButtonsContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 614.0
margin_top = 300.0
margin_right = 810.0
margin_bottom = 484.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextboxUsername" type="LineEdit" parent="MainButtonsContainer"]
margin_right = 196.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 2
align = 1
max_length = 35
context_menu_enabled = false
placeholder_text = "Name"
placeholder_alpha = 0.3

[node name="JoinContainer" type="HBoxContainer" parent="MainButtonsContainer"]
margin_top = 108.0
margin_right = 196.0
margin_bottom = 136.0

[node name="TextboxJoin" type="LineEdit" parent="MainButtonsContainer/JoinContainer"]
margin_right = 143.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
align = 1
max_length = 60
context_menu_enabled = false
placeholder_text = "IP Address"
placeholder_alpha = 0.3

[node name="ButtonJoin" type="Button" parent="MainButtonsContainer/JoinContainer"]
margin_left = 147.0
margin_right = 196.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
rect_pivot_offset = Vector2( 64.5, 109 )
hint_tooltip = "
"
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0.427451, 0.427451, 0.427451, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainButtonsContainer"]
margin_top = 140.0
margin_right = 196.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 3 )
text = "Or"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCreate" type="Button" parent="MainButtonsContainer"]
margin_top = 156.0
margin_right = 196.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 28 )
rect_pivot_offset = Vector2( 64.5, 109 )
hint_tooltip = "
"
custom_colors/font_color_disabled = Color( 0.427451, 0.427451, 0.427451, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Create Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtonsAnimation" type="AnimationPlayer" parent="MainButtonsContainer"]
autoplay = "SETUP"
anims/SETUP = SubResource( 4 )
anims/in = SubResource( 5 )
anims/out = SubResource( 6 )

[node name="TextGameInfo" type="RichTextLabel" parent="."]
margin_left = 12.0
margin_top = 10.0
margin_right = 332.0
margin_bottom = 84.0
custom_fonts/normal_font = SubResource( 7 )
text = "Drawing Game v0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButtonsContainer" type="HSplitContainer" parent="."]
margin_left = 18.0
margin_top = 557.0
margin_right = 1007.0
margin_bottom = 597.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGithub" type="Button" parent="BottomButtonsContainer"]
margin_top = 8.0
margin_right = 24.0
margin_bottom = 32.0
hint_tooltip = "Open Github"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSettings" type="LinkButton" parent="BottomButtonsContainer"]
margin_left = 929.0
margin_top = 8.0
margin_right = 989.0
margin_bottom = 31.0
size_flags_horizontal = 8
size_flags_vertical = 4
custom_fonts/font = SubResource( 13 )
text = "Settings"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}
